--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "pdf-parse": "^2.4.5"
   },
@@ -28,6 +30,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.1",
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.11",
