--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.11",
