--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # MongoDB Atlas Connection (Cloud MongoDB)
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/database?retryWrites=true&w=majority
+MONGO_URI=your-mongodb-atlas-connection-string-here
 
 # Backend Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
