--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   backend:
+    image: vvduth/dukem-learning-backend:latest
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -19,13 +20,9 @@ services:
       - ./backend/uploads:/app/uploads
     networks:
       - dukem-network
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
   frontend:
+    image: vvduth/dukem-learning-frontend:latest
     build:
       context: ./frontend
       dockerfile: Dockerfile
