--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,7 +16,7 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
 
     # API proxy to backend
-    location /api {
+    location /api/ {
         proxy_pass http://backend:5000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -29,7 +29,7 @@ server {
     }
 
     # Uploads proxy to backend
-    location /uploads {
+    location /uploads/ {
         proxy_pass http://backend:5000/uploads/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
