--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,26 @@
+# HTTP -> HTTPS redirect
 server {
     listen 80;
-    server_name localhost;
+    server_name dukem-learning.xyz www.dukem-learning.xyz;
+    
+    # Redirect all HTTP to HTTPS
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name dukem-learning.xyz www.dukem-learning.xyz;
+    
+    # SSL certificate paths (will be mounted from host)
+    ssl_certificate /etc/letsencrypt/live/dukem-learning.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/dukem-learning.xyz/privkey.pem;
+    
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    
     root /usr/share/nginx/html;
     index index.html;
 
@@ -8,12 +28,13 @@ server {
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # API proxy to backend
     location /api/ {
@@ -35,6 +56,10 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        
+        # Cache uploaded files
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 
     # React Router - serve index.html for all routes
