--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.943.0",
+    "@aws-sdk/s3-request-presigner": "^3.943.0",
     "@google/genai": "^1.30.0",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.3",
