--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^10.2.0",
     "react-router-dom": "^7.9.6",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.1",
